--- a/PHWAndriod/PHWAndriod/Views/MaterialBookingView.xaml
+++ b/PHWAndriod/PHWAndriod/Views/MaterialBookingView.xaml
@@ -71,14 +71,14 @@
                     </StackLayout>
 
                     <StackLayout Orientation="Horizontal">
-                        <Label Text="Book Qty : " FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                        <Label Text="Req. Qty : " FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
                         <Label Text="{Binding ReqQty}" FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" TextColor="#FFA500"/>
 
-                        <Label Text="Out Qty : " FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
+                        <Label Text="Book Qty : " FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
                         <Label Text="{Binding OutQty}" FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" TextColor="#FFA500"/>
                     </StackLayout>
 
-                    <Entry Placeholder="Enter Barcode" Grid.Row="6" Grid.Column="0" ReturnCommand="{Binding GetDispatchBarcodeDetailCommand}" Text="{Binding BarcodeNumber}"/>
+                    <Entry x:Name="BarcodeEntry" Completed="BarcodeEntry_Completed" Placeholder="Enter Barcode" Grid.Row="6" Grid.Column="0" ReturnCommand="{Binding GetDispatchBarcodeDetailCommand}" Text="{Binding BarcodeNumber}"/>
 
                     <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                         <StackLayout Orientation="Horizontal" HorizontalOptions="StartAndExpand">
