--- a/PHWAndriod/PHWAndriod/Views/StockinView.xaml
+++ b/PHWAndriod/PHWAndriod/Views/StockinView.xaml
@@ -7,7 +7,7 @@
             <StackLayout Margin="20" Spacing="30">
                 <StackLayout Orientation="Horizontal" Spacing="30" >
                     <Label Text="Inventory Type :" FontSize="20" FontAttributes="Bold" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"/>
-                    <Picker SelectedIndex="{Binding SelectedInventoryTypeIndex}" ItemsSource="{Binding ItemList}" ItemDisplayBinding="{Binding ItemTypeName}" FontSize="18" Margin="0" HeightRequest="50" WidthRequest="150" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Picker x:Name="ItemListPicker" SelectedIndex="{Binding SelectedInventoryTypeIndex}" ItemsSource="{Binding ItemList}" ItemDisplayBinding="{Binding ItemTypeName}" FontSize="18" Margin="0" HeightRequest="50" WidthRequest="150" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
                 </StackLayout>
                 <Entry x:Name="BarcodeEntry" Placeholder="Enter Barcode" ReturnCommand="{Binding GetStockInBarcodeDetailCommand}" Text="{Binding BarcodeNumber}"/>
 
